tests/bad/ident2.ml
let a = 2
and a = 3
